--- a/my_list.html
+++ b/my_list.html
@@ -1,9 +1,18 @@
-<h1>My Music List</h1>
-<p>Some of my favourite post-punk and Goth songs!</p>
-<ul>
-    <li>"Love Will Tear Us Apart"</li>
-    <li>"Bela Lugosi's Dead"</li>
-    <li>"A Forest"</li>
-    <li>"Nine While Nine"</li>
-    <li>"Girlfriend In a Coma"</li>
-</ul>
+<!DOCTYPE html>
+    <html lang="en">
+        <head>
+            <link rel="stylesheet" href="style.css"/>
+            <title>My Music</title>
+        </head>
+        <body>
+            <h1>My Music Preference</h1>
+            <p>Some of my favourite post-punk and Goth songs!</p>
+            <ul>
+                <li>"Love Will Tear Us Apart"</li>
+                <li>"Bela Lugosi's Dead"</li>
+                <li>"A Forest"</li>
+                <li>"Nine While Nine"</li>
+                <li>"Girlfriend In a Coma"</li>
+            </ul>
+        </body>
+    </html>
